src/objects/Travel_Request__c.object
<CustomObject>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Accommodation</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Airfare__c</fullName>
        <label>Airfare</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_of_Travel__c</fullName>
        <label>Days of Travel</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <label>Miscellaneous</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Travel__c</fullName>
        <label>Purpose of Travel</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_End_Date__c</fullName>
        <label>Travel End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Start_Date__c</fullName>
        <label>Travel Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Travel Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Travel Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>